welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (weekday && vacation == true){return true}
        ^